# WebCalculator

./: Add.hs  Application.hs  CalcStructure.hs  Calculations.hs  DBConnection.hs  Divide.hs  Foundation.hs  Home.hs  Main.hs  Multiply.hs  README.md  Subtract.hs  calculations.db  calculator.cabal  client_session_key.aes  file  routes  webcalculator.cabal
Database/: DBConnection.hs
Handler/: Add.hs  Calculations.hs  Divide.hs  Home.hs  Multiply.hs  Subtract.hs
database/: DBConnection.hs  calculationsDB  calculationsDB.sqbpro
static/: form.js
templates/: home.html  homePage.whamlet  homeTemplate.hamlet  layout.html
