name:               calculator
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          calculator
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    CalcStructure
                    DBConnection
                    Add
                    Subtract
                    Multiply
                    Divide
                    Home

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , text
                , sqlite-simple


  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
