name:               webcalculator
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          webcalculator
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    CalcStructure
                    DBConnection
                    Add
                    Subtract
                    Multiply
                    Divide
                    Home
                    Calculations

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-table
                , text
                , sqlite-simple
                , blaze-markup


  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
