name:               webcalculator
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          webcalculator
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    CalcStructure
                    Database.DBConnection
                    Handler.Add
                    Handler.Subtract
                    Handler.Multiply
                    Handler.Divide
                    Handler.Home
                    Handler.Calculations

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-auth >= 1.4.16
                , network
                , text
                , sqlite-simple
                , blaze-markup
                , http-conduit
                , data-default


  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
